--- a/DMSL_Task_1.ipynb
+++ b/DMSL_Task_1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMGK0G+JUaALY0m+Hd4fgu",
+      "mount_file_id": "17_Rm5d7FMtK9g05xTpOepSrLvNADgA7A",
+      "authorship_tag": "ABX9TyMJIBgzFNUcuAYbO+wlquQm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +73,7 @@
         "id": "HJ4wo99lJMRh",
         "outputId": "d9be9300-1c3e-4c17-fba9-05c354f8591b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +91,7 @@
       "metadata": {
         "id": "QZUelH2iI4C6"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -201,7 +202,7 @@
         "id": "79WDha4u3lUz",
         "outputId": "c70d7813-3ad2-45ab-d79d-37f1d450a9e4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
